# OptCompress

./: .gitignore  CMakeLists.txt  huffman.cpp  huffman.h  main.cpp  rle.cpp  rle.h  utils.cpp
src/: huffman.cpp  huffman.h  lzw.cpp  lzw.h  main.cpp  rle.cpp  rle.h  utils.h
